# s1mple.ai_backend

./: .gitignore  Dockerfile  README.md  main.py  main_assistant.py  main_assistant2.py  main_cors.py  nodes.py  pyproject.toml  react.py
custom_tools/: apify_search_tool.py  calendar_tools.py  financial_datasets_tools.py  gmail_tools.py  google_trends_tool.py
